Make separate string values for each FlagSuperCategory param for translation/change future proofing (since stored as a serializable in score history db)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,21 +3,37 @@
     <string name="button_title_flags">\ Flags</string>
     <string name="button_title_state_flags">\ State Flags</string>
     <string name="category_super_all">All</string>
-    <string name="category_super_all_detailed">All flags</string>
+    <string name="category_super_all_menu_button">All</string>
+    <string name="category_super_all_score_preview">All flags</string>
+    <string name="category_super_all_score_detailed">All flags</string>
     <string name="category_super_sovereign_country">Country (sovereign)</string>
-    <string name="category_super_sovereign_country_short">Country</string>
-    <string name="category_super_sovereign_country_game_category_detailed">Sovereign Country</string>
+    <string name="category_super_sovereign_country_menu_button">Country</string>
+    <string name="category_super_sovereign_country_score_preview">Country</string>
+    <string name="category_super_sovereign_country_score_detailed">Sovereign Country</string>
     <string name="category_super_autonomous_region">Autonomous or Associated Region</string>
-    <string name="category_super_autonomous_region_game_category_preview">Autonomous Region</string>
+    <string name="category_super_autonomous_region_menu_button">Autonomous or Associated Region</string>
+    <string name="category_super_autonomous_region_score_preview">Autonomous Region</string>
+    <string name="category_super_autonomous_region_score_detailed">Autonomous or Associated Region</string>
     <string name="category_super_regional">Regional</string>
+    <string name="category_super_regional_menu_button">Regional</string>
+    <string name="category_super_regional_score_preview">Regional</string>
+    <string name="category_super_regional_score_detailed">Regional</string>
     <string name="category_super_international">International</string>
-    <string name="category_super_international_detailed">International Organization</string>
+    <string name="category_super_international_menu_button">International Organization</string>
+    <string name="category_super_international_score_preview">International</string>
+    <string name="category_super_international_score_detailed">International Organization</string>
     <string name="category_super_cultural">Cultural</string>
+    <string name="category_super_cultural_menu_button">Cultural</string>
+    <string name="category_super_cultural_score_preview">Cultural</string>
+    <string name="category_super_cultural_score_detailed">Cultural</string>
     <string name="category_super_cultural_in_description">flag represents a</string>
     <string name="category_super_cultural_in_description_historical">flag represented a</string>
     <string name="category_super_cultural_in_description_also">flag also represents a</string>
     <string name="category_super_cultural_in_description_historical_also">flag also represented a</string>
     <string name="category_super_historical">Historical</string>
+    <string name="category_super_historical_menu_button">Historical</string>
+    <string name="category_super_historical_score_preview">Historical</string>
+    <string name="category_super_historical_score_detailed">Historical</string>
     <string name="category_super_political">Political Categories (countries)</string>
     <string name="category_sub_territorial_power_distribution">Territorial Distribution of Power</string>
     <string name="category_sub_executive_structure">Executive Structure and Accountability</string>
