Remove comma in 'Republic of Malawi,' string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1774,7 +1774,7 @@
     <string name="madrid_community_alt_2">Madrid Autonomous Community</string>
     <string name="madrid_community_alt_3">Madrid Province</string>
     <string name="malawi">Malawi</string>
-    <string name="malawi_official">Republic of Malawi,</string>
+    <string name="malawi_official">Republic of Malawi</string>
     <string name="malawi_wikipedia_url_path">Malawi</string>
     <string name="malawi_alt_1">Republic of Malawi</string>
     <string name="malawi_alt_2">mw</string>
