Rename score details strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -214,11 +214,11 @@
     <string name="game_score_details_time">%dm %02ds</string>
     <string name="game_score_details_time_date_connector">,\ </string>
     <string name="game_score_details_time_date_separator">\n</string>
-    <string name="game_score_details_guessed">Flags guessed (%d)</string>
-    <string name="game_score_details_skipped_guessed">Flags skipped, guessed (%d)</string>
-    <string name="game_score_details_skipped">Flags skipped, not guessed (%d)</string>
-    <string name="game_score_details_shown">Flags shown (%d)</string>
-    <string name="game_score_details_remainder">Remaining flags (%d)</string>
+    <string name="game_score_details_guessed">Guessed (%d)</string>
+    <string name="game_score_details_skipped_guessed">Skipped, guessed (%d)</string>
+    <string name="game_score_details_skipped">Skipped, not guessed (%d)</string>
+    <string name="game_score_details_shown">Shown (%d)</string>
+    <string name="game_score_details_remainder">Remaining (%d)</string>
     <string name="game_time_trial_title">Time trial</string>
     <string name="game_time_trial_input_placeholder">00</string>
     <string name="game_time_trial_minute">m</string>
