Finish first version of app navigation drawer and navigation logic, replacing StartMenuScreen. Implement basic system theme respecting splash screen with standard app colors. Refactor Theme components with minor style and architecture improvements. Inject first emission of userPreferencesRepository into MainActivityViewModel Factory for the UI StateFlow initial value so that there is no delay between UI launch and theme applying. ListFlagsScreen topBar title uses annotated string from StartMenuScreen. Disable 'Dynamic color' in SettingsScreen when Theme is 'Black' variant.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,6 +181,7 @@
     <string name="error">Error</string>
     <string name="flag">flag</string>
     <string name="flags">flags</string>
+    <string name="flags_of_the_world">"Flags of the World"</string>
     <string name="game_title">Game</string>
     <string name="game_description">Guess names of flags from their pictures</string>
     <string name="game_button_submit">Submit</string>
@@ -261,7 +262,6 @@
     <string name="settings_about_privacy_policy_description">This app doesn\'t collect or store any personal info</string>
     <string name="settings_about_app_version_title">App version</string>
     <string name="settings_about_app_version_description">%s</string>
-    <string name="start_menu_title">"Flags of the World"</string>
     <string name="string_a">a</string>
     <string name="string_and">and</string>
     <string name="string_and_a">and a</string>
