--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,8 +187,10 @@
     <string name="game_button_submit">Submit</string>
     <string name="game_button_skip">Skip</string>
     <string name="game_button_show">Show answer</string>
-    <string name="game_button_show_confirm">Are you sure? (%d)</string>
+    <string name="game_button_show_confirm">Confirm show (%d)</string>
     <string name="game_button_shown">Answer shown</string>
+    <string name="game_confirm_exit_title">Exit game</string>
+    <string name="game_confirm_exit_description">Game has progress. Confirm exit?</string>
     <string name="game_end">End game</string>
     <string name="game_guess_field_label">Your guess</string>
     <string name="game_guess_field_label_error">Incorrect</string>
