First version of new search logic: Make all search streams an input flow in the combine(). Use sealed interface for safe type casting within combine(). Remove 'the ' prefix from search query and search against FlagView's allSearchStringResIds list for simple soft match with any flag or related flag string and FlagView's flagStringResIds for simple exact match to sort it to beginning of results list.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -290,6 +290,7 @@
     <string name="string_that_is">that is</string>
     <string name="string_the">the</string>
     <string name="string_the_capitalized">The</string>
+    <string name="string_the_whitespace">the\ </string>
     <string name="string_was_a">was a</string>
     <string name="string_which_was_a">which was a</string>
     <string name="string_whitespace">\ </string>
