continue work on RelatedFlagsContent for detailed, dual menu sorting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -247,6 +247,10 @@
     <string name="menu_related_flags_political_short">Pol</string>
     <string name="menu_related_flags_chronological">Chronologically Related</string>
     <string name="menu_related_flags_chronological_short">Chron</string>
+    <string name="menu_related_flags_chronological_latest">Latest Administration</string>
+    <string name="menu_related_flags_chronological_previous">Previous Administrations</string>
+    <string name="menu_related_flags_chronological_previous_of_sovereign">Previous Admins of Sovereign</string>
+    <string name="menu_related_flags_chronological_dependents_of_latest">Dependents of Latest Admin</string>
     <string name="menu_multiple_selection">Multiple Categories Selected</string>
     <string name="menu_icon_expand">expand menu</string>
     <string name="menu_icon_collapse">collapse menu</string>
