Refactor category menu buttonTitle expression to be more readable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,6 +118,7 @@
     <string name="category_federal_string">federal</string>
     <string name="category_confederation_title">Confederation</string>
     <string name="category_confederation_string">confederation</string>
+    <string name="category_confederal_string">confederal</string>
     <string name="category_directorial_title">Directorial</string>
     <string name="category_directorial_string">directorial</string>
     <string name="category_parliamentary_title">Parliamentary</string>
