Rework exceptions for autonomous regions with irregular power derivation and/or ideologies

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,10 +48,14 @@
     <string name="category_free_association_in_description">in free association with</string>
     <string name="category_autonomous_region_title">Autonomous Region</string>
     <string name="category_autonomous_region_string">autonomous region</string>
+    <string name="category_autonomous_region_in_description">autonomous</string>
     <string name="category_autonomous_region_in_description_an">n autonomous</string>
     <string name="category_devolved_government_title">Devolved Government</string>
     <string name="category_devolved_government_string">devolved government</string>
     <string name="category_devolved_government_in_description">with a devolved government</string>
+    <string name="category_devolved_government_in_description_theocratic">with a devolved theocratic government</string>
+    <string name="category_devolved_government_in_description_socialist">with a devolved socialist government</string>
+    <string name="category_devolved_government_in_description_fascist">with a devolved fascist government</string>
     <string name="category_indigenous_territory_title">Indigenous Territory</string>
     <string name="category_indigenous_territory_string">indigenous territory</string>
     <string name="category_canton_title">Canton</string>
@@ -141,14 +145,26 @@
     <string name="category_one_party_title">One-Party</string>
     <string name="category_one_party_string">one-party</string>
     <string name="category_one_party_in_description">state under a one-party system</string>
+    <string name="category_one_party_in_description_non_state">under a one-party system</string>
+    <string name="category_one_party_in_description_non_state_theocratic">under a theocratic one-party system</string>
+    <string name="category_one_party_in_description_non_state_socialist">under a socialist one-party system</string>
+    <string name="category_one_party_in_description_non_state_fascist">under a fascist one-party system</string>
     <string name="category_theocracy_title">Theocracy</string>
     <string name="category_theocracy_string">theocracy</string>
     <string name="category_military_junta_title">Military Junta</string>
     <string name="category_military_junta_string">military junta</string>
-    <string name="category_military_junta_in_description">system under a military junta</string>
+    <string name="category_military_junta_in_description">state under a military junta</string>
+    <string name="category_military_junta_in_description_non_state">under a military junta</string>
+    <string name="category_military_junta_in_description_non_state_theocratic">under a theocratic military junta</string>
+    <string name="category_military_junta_in_description_non_state_socialist">under a socialist military junta</string>
+    <string name="category_military_junta_in_description_non_state_fascist">under a fascist military junta</string>
     <string name="category_provisional_government_title">Provisional Government</string>
     <string name="category_provisional_government_string">provisional government</string>
-    <string name="category_provisional_government_in_description">system under a provisional government</string>
+    <string name="category_provisional_government_in_description">state under a provisional government</string>
+    <string name="category_provisional_government_in_description_non_state">under a provisional government</string>
+    <string name="category_provisional_government_in_description_non_state_theocratic">under a theocratic provisional government</string>
+    <string name="category_provisional_government_in_description_non_state_socialist">under a socialist provisional government</string>
+    <string name="category_provisional_government_in_description_non_state_fascist">under a fascist provisional government</string>
     <string name="category_democracy_title">Democracy</string>
     <string name="category_democracy_string">democracy</string>
     <string name="category_authoritarian_title">Authoritarian</string>
