--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="category_super_historical_menu_button">Historical</string>
     <string name="category_super_historical_score_preview">Historical</string>
     <string name="category_super_historical_score_detailed">Historical</string>
-    <string name="category_super_political">Political Categories (countries)</string>
+    <string name="category_super_political">Political Categories (country/org)</string>
     <string name="category_sub_territorial_power_distribution">Territorial Distribution of Power</string>
     <string name="category_sub_executive_structure">Executive Structure and Accountability</string>
     <string name="category_sub_legal_constraint">Legal Constraint on Leaders</string>
@@ -126,6 +126,7 @@
     <string name="category_federal_string">federal</string>
     <string name="category_confederation_title">Confederation</string>
     <string name="category_confederation_string">confederation</string>
+    <string name="category_confederal_title">Confederal</string>
     <string name="category_confederal_string">confederal</string>
     <string name="category_directorial_title">Directorial</string>
     <string name="category_directorial_string">directorial</string>
