--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -209,6 +209,7 @@
     <string name="categories_autonomous_title">Autonomous</string>
     <string name="categories_autonomous_string">autonomous</string>
     <string name="categories_autonomous_regional">Autonomous or (Non-Sovereign) Associated Region</string>
+    <string name="categories_devolved_title">Devolved</string>
     <string name="categories_and">\ &amp;\ </string>
     <string name="dialog_ok">OK</string>
     <string name="dialog_cancel">Cancel</string>
