Update category description logic for new model

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,27 +149,19 @@
     <string name="category_monarchy_string">monarchy</string>
     <string name="category_one_party_title">One-Party</string>
     <string name="category_one_party_string">one-party</string>
+    <string name="category_one_party_in_description_short">one-party system</string>
     <string name="category_one_party_in_description">state under a one-party system</string>
     <string name="category_one_party_in_description_non_state">under a one-party system</string>
-    <string name="category_one_party_in_description_non_state_theocratic">under a theocratic one-party system</string>
-    <string name="category_one_party_in_description_non_state_socialist">under a socialist one-party system</string>
-    <string name="category_one_party_in_description_non_state_fascist">under a fascist one-party system</string>
     <string name="category_theocracy_title">Theocracy</string>
     <string name="category_theocracy_string">theocracy</string>
     <string name="category_military_junta_title">Military Junta</string>
     <string name="category_military_junta_string">military junta</string>
     <string name="category_military_junta_in_description">state under a military junta</string>
     <string name="category_military_junta_in_description_non_state">under a military junta</string>
-    <string name="category_military_junta_in_description_non_state_theocratic">under a theocratic military junta</string>
-    <string name="category_military_junta_in_description_non_state_socialist">under a socialist military junta</string>
-    <string name="category_military_junta_in_description_non_state_fascist">under a fascist military junta</string>
     <string name="category_provisional_government_title">Provisional Government</string>
     <string name="category_provisional_government_string">provisional government</string>
     <string name="category_provisional_government_in_description">state under a provisional government</string>
     <string name="category_provisional_government_in_description_non_state">under a provisional government</string>
-    <string name="category_provisional_government_in_description_non_state_theocratic">under a theocratic provisional government</string>
-    <string name="category_provisional_government_in_description_non_state_socialist">under a socialist provisional government</string>
-    <string name="category_provisional_government_in_description_non_state_fascist">under a fascist provisional government</string>
     <string name="category_democracy_title">Democracy</string>
     <string name="category_democracy_string">democracy</string>
     <string name="category_authoritarian_title">Authoritarian</string>
@@ -210,6 +202,9 @@
     <string name="categories_autonomous_string">autonomous</string>
     <string name="categories_autonomous_regional">Autonomous or (Non-Sovereign) Associated Region</string>
     <string name="categories_devolved_title">Devolved</string>
+    <string name="categories_non_self_governing_territory_string">non-self-governing territory</string>
+    <string name="categories_non_self_governing_territory_descriptor">(NSGT)</string>
+    <string name="categories_under_a">under a</string>
     <string name="categories_and">\ &amp;\ </string>
     <string name="dialog_ok">OK</string>
     <string name="dialog_cancel">Cancel</string>
@@ -322,6 +317,7 @@
     <string name="string_comma">,</string>
     <string name="string_comma_whitespace">,\ </string>
     <string name="string_defunct">defunct</string>
+    <string name="string_defunct_bracketed">(defunct)</string>
     <string name="string_in">in</string>
     <string name="string_in_the">in the</string>
     <string name="string_is_a">is a</string>
