--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -222,9 +222,12 @@
     <string name="game_confirm_exit_title">Exit game</string>
     <string name="game_confirm_exit_description">Game has progress. Confirm exit?</string>
     <string name="game_end">End game</string>
-    <string name="game_guess_field_label">Your guess</string>
+    <string name="game_guess_field_names_label">Guess name(s)</string>
+    <string name="game_guess_field_dates_label">Guess date(s)</string>
     <string name="game_guess_field_label_error">Incorrect</string>
     <string name="game_guess_field_label_success">Correct!</string>
+    <string name="game_mode_names_title">Names</string>
+    <string name="game_mode_dates_title">Dates</string>
     <string name="game_over_title">Game over</string>
     <string name="game_over_text">Flags guessed: %d/%d</string>
     <string name="game_over_text_max_score">You guessed every flag…\nNerd!</string>
